<resources>
    <string name="app_name">Get Taxi Driver</string>
    <string name="register_fullName">Full Name:</string>
    <string name="register_id">ID:</string>
    <string name="register_email">Email:</string>
    <string name="register_ccNumber">Credit Card Number:</string>
    <string name="register_phone">Phone Number:</string>
    <string name="login_button_string">Login</string>
    <string name="register_username">userName:</string>
    <string name="register_password">Password:</string>
    <string name="register_textview">Register</string>
    <string name="login_email">Email:</string>
    <string name="login_password">Password:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_register_button">not signed in? Register Here</string>
    <string name="welcome_app">"Welcome Back!</string>

    <!-- Strings related to navigation drawer menu -->
    <string name="available_rides">Available Rides</string>
    <string name="my_rides">My Rides</string>
    <string name="visit_online">Visit Us Online</string>
    <string name="exit">Exit</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
